Telegrambots dependency and simple bot